[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/kenny_edited.png" type="Texture" id=1]
[ext_resource path="res://environment/Hazards/HazardSingletons/HazardHitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/Hazards/Spikes.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 48, 160, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Active",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Inactive",
"speed": 5.0
} ]

[node name="Spikes" type="StaticBody2D"]
position = Vector2( 0, -4 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
frames = SubResource( 3 )
animation = "Active"

[node name="SpikeActiveTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
autostart = true

[node name="SpikeInactiveTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HazardHitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 2

[node name="HazardCollider" type="CollisionPolygon2D" parent="HazardHitbox"]
polygon = PoolVector2Array( -9, 4, 9, 4, 4, -6, 0, 1, -1, 1, -4, -6 )

[node name="CollisionBody" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -7, 4, 7, 4, 4, -3, 0, 2, -1, 2, -4, -3 )

[connection signal="timeout" from="SpikeActiveTimer" to="." method="_on_SpikeActiveTimer_timeout"]
[connection signal="timeout" from="SpikeInactiveTimer" to="." method="_on_SpikeInactiveTimer_timeout"]
